namespace OpenClosed;

public class OneTimeProduct : Product
{
    public OneTimeProduct(string name, decimal price) : base(name, price)
    {
    }
}